log
Tue 23 Apr 2024 08:11:23 PM UTC: 
 tests:  0|6
total_score: 0/70
bbf69ed
Wed 24 Apr 2024 06:49:21 PM UTC: 
 hashmap.c | 19 +++++++++++++++++--
 1 file changed, 17 insertions(+), 2 deletions(-)
 tests:  1|5
total_score: 10/70
5a23d84
Wed 24 Apr 2024 06:53:02 PM UTC: 
 hashmap.c | 26 +++++++++++++++++++++++++-
 1 file changed, 25 insertions(+), 1 deletion(-)
 tests:  2|5
total_score: 20/70
8bbb385
Wed 24 Apr 2024 06:57:55 PM UTC: 
 hashmap.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  2|5
total_score: 20/70
f27739d
Thu 25 Apr 2024 05:20:20 PM UTC: 
 hashmap.c | 25 ++++++++++++++++++++++---
 1 file changed, 22 insertions(+), 3 deletions(-)
 tests:  0|0
4a148c8
Thu 25 Apr 2024 05:37:24 PM UTC: 
 hashmap.c | 22 ----------------------
 1 file changed, 22 deletions(-)
 tests:  2|5
total_score: 20/70
3cecea7
Thu 25 Apr 2024 05:43:23 PM UTC: 
 hashmap.c | 18 +++++++++++++++---
 1 file changed, 15 insertions(+), 3 deletions(-)
In file included from test.c:4:
hashmap.c: In function ‘searchMap’:
hashmap.c:115:1: error: control reaches end of non-void function [-Werror=return-type]
  115 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
bfc1f34
